Migration to Java 21 and Spring Boot 3.2.5